[package]
name = "example-runner-cpu"
version = "0.4.0-alpha.13"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
minifb = "0.20.0"
# bring in the shader as natively compiled code
shared = { path = "../../shaders/shared" }
sky-shader = { path = "../../shaders/sky-shader" }

# for parallelism, not really needed though
rayon = "1.5"
