[package]
name = "compute-shader"
version = "0.4.0-alpha.3"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std-macros = { path = "../../../crates/spirv-std-macros" }
spirv-std = { path = "../../../crates/spirv-std" }
