[package]
name = "compute-shader"
version = "0.4.0-alpha.12"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { path = "../../../crates/spirv-std", features = ["glam"] }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
rayon = "1.5"
